<resources>
    <string name="app_name">market</string>
    <string name="retry">تلاش مجدد</string>
    <string name="error_in_connection">خطا در برقراری ارتباط…</string>

    <string name="home">خانه</string>
    <string name="category">دسته بندی ها</string>
    <string name="sale_basket">سبد خرید</string>
    <string name="my_market">بازار من</string>
    <string name="on_back_message">برای خروج دوباره بازگشت را بزنید</string>
    <string name="sample_title">گوشی موبایل سامسونگ مدل Galaxy A51 SM-A5</string>
    <string name="sample_price">489000 هزار تومان</string>
    <string name="last_product_label">جدیدترین محصولات</string>
    <string name="popular_product_label">پربازدیدترین محصولات</string>
    <string name="most_rating_product_label">بیشترین امتیاز</string>
    <string name="search_in_market">جستجو در </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_in_all_categories">جستجو در همه کالاها</string>
    <string name="add_to_sale_basket">افزودن به سبد خرید</string>
    <string name="rate_of_this_product">امتیاز محصول</string>
    <string name="properties_of_product">مشخصات محصول</string>
    <string name="similar_product">محصولات مشابه</string>
    <string name="digital_stuffs_title">کالای دیجیتال</string>
    <string name="fashion_and_model">مد و پوشاک</string>
    <string name="art_and_book">کتاب و هنر</string>
    <string name="super_market">سوپر مارکت</string>
    <string name="other">دیگر</string>
    <string name="see_all_products">مشاهده همه</string>
    <string name="all_products">همه محصولات</string>

</resources>