<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.zolfagharipour.market.viewModel.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/containerSaleViews"
            android:visibility="@{viewModel.isDataFetched()? View.VISIBLE: View.GONE}"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerPhotoSlider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300mdp"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                    android:id="@+id/dotCircleIndicatorPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    app:dotsColor="#7C7A7B"
                    app:dotsSize="@dimen/_6mdp"
                    app:dotsSpacing="2dp"
                    app:layout_constraintBottom_toBottomOf="@id/viewPagerPhotoSlider"
                    app:layout_constraintEnd_toEndOf="@id/viewPagerPhotoSlider"
                    app:layout_constraintStart_toStartOf="@id/viewPagerPhotoSlider"
                    app:selectedDotColor="@color/purple_700" />

                <TextView
                    android:id="@+id/textViewProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/font_yekan"
                    android:gravity="start"
                    android:layout_marginEnd="@dimen/_8mdp"
                    android:layout_marginStart="@dimen/_8mdp"
                    android:text="@{viewModel.product.name}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18font_mdp"
                    app:layout_constraintTop_toBottomOf="@id/viewPagerPhotoSlider" />

                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:progress="@{viewModel.product.rateFormatted()}"
                    android:max="10"
                    android:mirrorForRtl="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_marginEnd="@dimen/_8mdp"
                    android:focusableInTouchMode="false"
                    android:isIndicator="true"
                    android:progressTint="@color/colorYellow"
                    app:layout_constraintTop_toBottomOf="@id/textViewProductTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/textViewTotalSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.product.totalSaleFormatted}"
                    app:layout_constraintTop_toTopOf="@id/ratingBar"
                    app:layout_constraintBottom_toBottomOf="@id/ratingBar"
                    app:layout_constraintEnd_toStartOf="@id/ratingBar"
                    android:textSize="@dimen/_16font_mdp"
                    android:layout_marginTop="@dimen/_8mdp"
                    android:paddingBottom="@dimen/_8mdp"
                    android:fontFamily="@font/font_yekan"/>

                <View
                    android:id="@+id/viewDividerTitleProduct"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/_8mdp"
                    android:background="@color/colorGrayLight"
                    app:layout_constraintTop_toBottomOf="@id/ratingBar"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/textViewDescriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/viewDividerTitleProduct"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_8mdp"
                    android:text="@string/properties_of_product"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/_8mdp"
                    android:textSize="@dimen/_18font_mdp"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/textViewDescriptionTitle"
                    android:text="@{viewModel.product.descriptionFormatted()}"
                    android:gravity="start"
                    android:lineSpacingExtra="10dp"
                    android:layout_marginStart="@dimen/_8mdp"
                    android:layout_marginEnd="@dimen/_8mdp"
                    android:textSize="@dimen/_16font_mdp"
                    android:textDirection="rtl"
                    android:layoutDirection="rtl"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_categories_in_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGrayLight"
                    app:layout_constraintTop_toBottomOf="@id/textViewDescription"/>

                <TextView
                    android:id="@+id/textViewSimilarProductTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/similar_product"
                    android:textSize="@dimen/_18font_mdp"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_8mdp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_categories_in_product"
                    android:layout_marginTop="@dimen/_8mdp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_similar_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/textViewSimilarProductTitle"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20mdp"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_similar_product"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{viewModel.isDataFetched()? View.VISIBLE: View.GONE}"
            android:id="@+id/containerSaleViews">

            <View
                android:id="@+id/viewDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLight"
                app:layout_constraintBottom_toTopOf="@id/textViewDiscountValue"
                android:layout_marginBottom="4dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddToSaleBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/viewDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_8mdp"
                android:text="@string/add_to_sale_basket"
                android:textSize="@dimen/_16font_mdp"
                android:fontFamily="@font/font_yekan"/>

            <TextView
                android:id="@+id/textViewDiscountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/textViewCurrentPrice"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_8mdp"
                android:background="@drawable/discount_background"
                android:gravity="center"
                android:text="@{viewModel.product.discountPercentFormatted()}"
                android:fontFamily="@font/font_yekan"
                android:textSize="@dimen/_16font_mdp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textViewRegularPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.product.regularPriceFormatted()}"
                app:layout_constraintBottom_toTopOf="@id/textViewCurrentPrice"
                app:layout_constraintEnd_toStartOf="@id/textViewDiscountValue"
                android:layout_marginEnd="@dimen/_8mdp"
                android:textSize="@dimen/_16font_mdp"
                android:fontFamily="@font/font_yekan"/>

            <TextView
                android:id="@+id/textViewCurrentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.product.currentPriceFormatted()}"
                app:layout_constraintEnd_toEndOf="@id/textViewDiscountValue"
                app:layout_constraintBottom_toBottomOf="@id/buttonAddToSaleBasket"
                android:layout_marginEnd="@dimen/_8mdp"
                android:fontFamily="@font/font_yekan"
                android:textSize="@dimen/_16font_mdp"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/layoutLoading"
            layout="@layout/lottie_loading_layout"
            android:visibility="@{viewModel.showLoading? View.VISIBLE: View.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <include
            layout="@layout/error_in_connection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="@{viewModel.showDisconnected? View.VISIBLE: View.GONE}"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>